# MEDIONE_ESU_DRAFT

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  nextion10inchfull11.ioc
bootloader/inc/: main.h
bootloader/src/: bootloader.c  main.c
cmake/: gcc-arm-none-eabi.cmake
common/inc/: crc.h  flash.h  image.h
common/src/: crc.c  flash.c  image.c
core/inc/: adc_monitor.h  app_defs.h  app_fsm.h  nextion.h  pedal.h  relay.h  rf_generator.h  safety.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  uart_protocol.h
core/src/: adc_monitor.c  app_fsm.c  image_header.c  main.c  nextion.c  pedal.c  relay.c  rf_generator.c  safety.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  system_stm32f4xx.c  uart_protocol.c
linker/: app.ld  bootloader.ld
scripts/: merge_bootloader.py  patch_image_header.py
scripts/tools/: find_stm32cubeclt.py  gdb-wrapper.sh  gdbserver-wrapper.sh  memap.py
updater/inc/: main.h
updater/src/: system_stm32f4xx.c  updater.c
